change product attributes